--- a/style.css
+++ b/style.css
@@ -1,17 +1,24 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
-body{
-    background-color: #0a0a0a;
+
+body {
+    background: linear-gradient(155deg, #6b41ce, #c27eb9);
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
+
 .cal {
-    max-width: 500px;
-    margin: 90px auto;
+    max-width: 350px;
     padding: 20px;
-    border-radius: 30px;
-    background-color: grey;
-    border: 1px solid #0a0a0a;
+    border-radius: 15px;
+    background-color: #333;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .cal-scr {
@@ -24,17 +31,24 @@ body{
     border-radius: 10px;
     border: 2px solid #111010;
     background-color: white;
+    color: #333;
 }
 
-.section button {
+button {
     width: 100%;
     height: 70px;
-    margin: 2%;
     font-size: 1.5rem;
     border-radius: 5px;
 }
-.equal{
-    padding: 10px;
-    margin-left: -12px;
-}
 
+button[value="+"],
+button[value="-"],
+button[value="*"],
+button[value="/"] {
+    border-radius: 50%;
+    font-size: x-large;
+}
+button[value="="],
+button[value="C"]{
+    font-size: x-large;
+}
